# docker_k8s_devops_lab

./: .gitlab-ci.yml  .travis.yml  Dockerfile  Dockerfile.dev  Dockerfile.node  README.md  angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json
karya/: README.md  docker-compose.yml  nginx.conf  package.json  proxy.conf.json
karya/e2e/src/: app.e2e-spec.ts
karya/python/: setup.cfg
karya/python/app/: run.py
karya/python/configuration/: db.py
karya/python/migrations/: env.py
karya/python/models/: __init__.py
karya/server/: index.js
karya/server/models/: user.js
karya/server/routes/: rentals.js  users.js
karya/src/: styles.scss
karya/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
karya/src/app/rental/: rental.module.ts
python/: README.md  requirements.txt
python/app/: main_app.py
python/configuration/: app.db  env.py
python/migrations/versions/: df5178c76195_.py
python/models/: rental.py  user.py
python/routes/: user_controller.py
server/config/: config.js
server/controllers/: users.js
server/helpers/: mongoose.js
server/models/: fake-db.js  rental.js
simple_web_app/: docker-compose.yml  index.js
src/: index.html
src/app/: app.component.spec.ts  app.module.ts
src/app/auth/: auth.module.ts
src/app/auth/login/: login.component.ts
src/app/auth/register/: register.component.html  register.component.scss  register.component.ts
src/app/auth/shared/: auth.service.ts
src/app/common/header/: header.module.ts
src/environments/: environment.prod.ts  environment.ts
(+18 files in other folders)
