[metadata]
name=karya
version=0.1.0
description=Karya
long_description=Karya airbnb like project
author=Aymen MOUSSI
author_email=moussi.gl@gmail.com
url=https=//www.karya.tn
license=MIT

packages =find:

install_requires =
	flask
	flask_restful
	SQLAlchemy

include_package_data = true

[options.extras_require]
develop =
  pip
  wheel
  setuptools
	requests
test =
  black
	unidecode
	pytest
	pytest-cov
	behave
	allure-behave
doc =
	sphinx
	sphinx_rtd_theme


[options.entry_points]
console_scripts =
    run_app =app.run:run
